--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
 
     <string name="floating_notification_description">Tap to open</string>
 
-    <string name="action_setting">Setting</string>
+    <string name="action_settings">Settings</string>
     <string name="action_open_floating_codec">Floating codec</string>
     <string name="action_floating_stylish">Floating stylish</string>
     <string name="action_share_app">Share this app</string>
