Rename app to what it should be: Text Converter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
   -->
 
 <resources>
-    <string name="app_name">Codec</string>
+    <string name="app_name">Text Converter</string>
     <string name="choose_method">Choose method</string>
     <string name="encode">Encode</string>
     <string name="decode">Decode</string>
